		- No more label cuts when vertex is strictly limited in width or height
		- No more jerky edge endpoints when edge label is too large
		- No more labels behind edges or vertices. You can control how to inject them		
	To use new labels you have to specify GraphArea::VertexLabelFactory and GraphArea::EdgeLabelFactory factories to generate labels when graph is generated.

DETAILED CHANGELOG:
	+ Added GroupId property to IGraphXVertex interface
	+ Added parameters class RandomLayoutAlgorithmParams for corresponding algorithm. It contains Bounds property which can restrict vertex coordinates to respect provided bounds.
	+ Added two methods to EdgeControl: GetEdgePointerForSource() and GetEdgePointerForTarget() which allows to get to edge pointer objects manualy
	+ Added VertexShape.Ellipse math shape
	+ Added support for reversing the geometry. This is required for animating shapes along a path where the direction needs to be reversed without using the Storyboard.AutoReverse property (thanks to bleibold)
	+ Added two new attached label classes for Edge and Vertex controls.
	+ Added EdgeControl::LabelMouseDown event
	+ Added separate ID counter for edges while autoresolving missing id 
	+ Added EdgeControl::UpdateLabel() method to be able to update attached edge label manually (tech means to overcome some template quizes)
	+ Added GraphArea::GetChildControls() method to easily fetch any child objects (incl. custom) by condition or just get all of them
	+ Added GraphArea::VertexLabelFactory and GraphArea::EdgeLabelFactory properties for corresponding label factories. Will generate labels automatically after the graph layout if defined
	+ Added GraphArea::MoveToFront() and GraphArea::MoveToBack() methods that will move specified GraphArea child to the top/bottom of the visual tree respectively
	+ Added MouseEventArgs for VertexDoubleClick event to be able to correctly block click event when you're dragging vertex and open dialog window at once