@@ -2,6 +2,7 @@
 using System.Windows;
 #elif METRO
 using Windows.Foundation;
+using Windows.UI.Xaml;
 #endif
 
 
@@ -13,6 +14,7 @@ namespace GraphX.Controls
         Point GetPosition(bool final = false, bool round = false);
         void SetPosition(Point pt, bool alsoFinal = true);
         void SetPosition(double x, double y, bool alsoFinal = true);
+        Visibility Visibility { get; set; }
         void Clean();
     }
 }
